Fix Viper.spawn and WebSocket client
Spawn fixes:
- Make Viper.spawn and Viper.exec return Promises (async functions)
- Create Viper namespace if it doesn't exist (was only created with --features server)
- Decode stdout/stderr to strings before returning

WebSocket fixes:
- Replace web-socket crate with tokio-tungstenite for reliable connections
- Add proper TLS support (wss://) via native-tls feature
- Fix DNS resolution by using tokio's connect_async
- Add proper message send channel with mpsc
- Add error reporting via __viper_ws_get_error
- Handle connection lifecycle properly

All examples now work correctly:
- examples/10-spawn.ts - Process spawning
- examples/11-websocket-client.ts - WebSocket echo client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,8 @@ tokio = { version = "1", features = ["full"] }
 uuid = { version = "1", features = ["v4"] }
 rand = "0.9"
 
-# WebSocket support (using web-socket - fastest implementation)
-web-socket = "0.7"
+# WebSocket support (using tokio-tungstenite - reliable with TLS support)
+tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
 futures-util = "0.3"
 
 # HTTP server (Hyper for ultra-fast single-threaded server)
