--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,13 +40,14 @@ rand = "0.9"
 tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
 futures-util = "0.3"
 
+# Lock-free synchronization for ultra-fast WebSocket
+parking_lot = "0.12"
+
 # HTTP server (Hyper for ultra-fast single-threaded server)
 hyper = { version = "1", features = ["http1", "server"], optional = true }
 hyper-util = { version = "0.1", features = ["tokio"], optional = true }
 http-body-util = { version = "0.1", optional = true }
 bytes = { version = "1", optional = true }
-sha1 = { version = "0.10", optional = true }
-base64 = { version = "0.22", optional = true }
 
 # Also keep Axum for the CLI serve command
 axum = { version = "0.7", optional = true }
@@ -69,5 +70,5 @@ url = { version = "2", optional = true }
 
 [features]
 default = ["server", "pm"]
-server = ["hyper", "hyper-util", "http-body-util", "bytes", "sha1", "base64", "axum", "serde", "serde_json", "num_cpus"]
+server = ["hyper", "hyper-util", "http-body-util", "bytes", "axum", "serde", "serde_json", "num_cpus"]
 pm = ["node-maintainer", "nassun", "oro-common", "oro-package-spec", "async-std", "indicatif", "url", "serde", "serde_json"]
